table animation added and mobile border overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,18 @@
 :root {
+
+    /*Colors*/ 
+
     --main-bg-color: whitesmoke;
     --second-bg-color: blue;
     --third-bg-color: yellow;
     --main-text-color: black;
     --second-text-color: red;
     --main-dark-color: #000015;
+
+     /*Font*/
+     
+     --main-font: example;  
+     --font-size: 1rem;
 
 }
 
@@ -129,7 +137,12 @@ tbody tr:nth-child(even){
     }
 
     .info-table{
-        width: 90vw;
+        width: 90%;
+    }
+
+    .info-table tbody tr{
+        transition: all .2s ease-in;
+        cursor: pointer;
     }
 
     .info-section{
@@ -142,5 +155,12 @@ tbody tr:nth-child(even){
     .info-section > h2 {
         width: 100%;
         margin-bottom: 1rem;
+    }
+
+    tbody > tr:hover{
+        background-color: #f5f5f5;
+        transform: scale(1.02);
+        box-shadow: 0 0.25rem 0.75rem var(--main-dark-color);
+
     }
 }
